Added uploading files to the server
Signed-off-by: Makhlov <makhlov.egor@gmail.com>

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,6 @@ spring.jpa.generate-ddl=true
 # I will correct this point later.
 
 spring.freemarker.expose-request-attributes=true
+spring.servlet.multipart.max-file-size=500MB
+spring.servlet.multipart.max-request-size=500MB
+upload.path=/C:/download/
